external-crates/move/crates/move-compiler/tests/move_check/parser/let_binding_missing_semicolon.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/let_binding_missing_semicolon.move:4:5
  │
4 │     }
  │     ^
  │     │
  │     Unexpected '}'
  │     Expected ';'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/let_binding_missing_semicolon.move:5:1
  │
5 │ }
  │ ^ Invalid code unit. Expected 'address' or 'module'. Got '}'

